[package]
name = "raytracer"
version = "0.1.1"
edition = "2024"
description = "A hobby ray tracer project"
repository = "https://github.com/atzhukov/raytracer"

[lib]
name = "raytracer"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]
doctest = false

[[bin]]
name = "raytracer-cli"
path = "src/main.rs"

[[bench]]
name = "render"
harness = false

[dependencies]
clap = { version = "4.5.51", features = ["color", "derive"] }
rand = "0.9.2"
rayon = "1.11.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] } # transitive via rand
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.105"

[dev-dependencies]
criterion = "0.7.0"

[features]
bench = []

[target.wasm32-unknown-unknown]
rustflags = [
	'--cfg', 'getrandom_backend="wasm_js"',
	'-C', 'target-feature=+bulk-memory'
]

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
